LPS-147108 Add language keys

--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_bg.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_bg.properties
@@ -12400,6 +12400,7 @@ request-courier=Заявка куриер (Automatic Translation)
 request-details=Подробности за заявката (Automatic Translation)
 request-details-full=Пълна информация за заявката (Automatic Translation)
 request-details-minimal=Минимално изискване на подробности (Automatic Translation)
+request-files=Request Files (Automatic Copy)
 request-header-auto-login-configuration-name=Заглавка на заявка за автоматично влизане (Automatic Translation)
 request-holiday=Заявяване на почивен ден
 request-is-larger-than-x-and-could-not-be-processed=Request is larger than {0} and could not be processed. (Automatic Copy)
@@ -14857,6 +14858,7 @@ the-file-was-processed-correctly=Файлът е обработен правил
 the-file-x-cannot-be-imported=The file <em>{0}</em> cannot be imported. (Automatic Copy)
 the-file-x-cannot-be-inspected=The file {0} cannot be inspected. (Automatic Copy)
 the-file-x-cannot-be-saved=The file <em>{0}</em> cannot be saved. (Automatic Copy)
+the-files-can-be-stored-in-a-object-entry-or-in-a-specific-folder-from-documents-and-media=The files can be stored in a object entry or in a specific folder from Documents and Media. (Automatic Copy)
 the-files-were-imported-correctly=Файловете са импортирани правилно. (Automatic Translation)
 the-firm-cannot-be-deleted-because-it-has-associated-projects=Фирмата не може да бъде изтрита, защото тя е свързана с проекти.
 the-firm-could-not-be-found=Фирмата не може да бъде намерена.
@@ -16503,6 +16505,7 @@ upload-another-file=Upload Another File (Automatic Copy)
 upload-certificate=Качване на сертификат (Automatic Translation)
 upload-completed=Качването е завършено
 upload-definition=Определение за качване (Automatic Translation)
+upload-directly-from-users-computer=Upload Directly from the User's Computer Computer (Automatic Copy)
 upload-document=Качване на документ
 upload-documents-no-larger-than-3000-k=Качване на документи не по-големи от 3000k. (Automatic Translation)
 upload-documents-no-larger-than-x=Качване на документи, не по-големи от {0}.
