--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
@@ -12402,6 +12402,7 @@ request-courier=Sol·licitar Courier
 request-details=Detalls de la sol·licitud
 request-details-full=Detalls complets de la sol·licitud
 request-details-minimal=Detalls mínims de la sol·licitud
+request-files=Request Files (Automatic Copy)
 request-header-auto-login-configuration-name=Capçalera de la sol.licitud de conexió automàtica
 request-holiday=Sol·licita vacances
 request-is-larger-than-x-and-could-not-be-processed=La sol·licitud és més gran que {0} i no pot ser processada.
@@ -14859,6 +14860,7 @@ the-file-was-processed-correctly=El fitxer s'ha processat correctament.
 the-file-x-cannot-be-imported=El fitxer <em>{0}</em> no es pot importar.
 the-file-x-cannot-be-inspected=El fitxer {0} no es pot inspeccionar.
 the-file-x-cannot-be-saved=El fitxer <em>{0}</em> no es pot desar.
+the-files-can-be-stored-in-a-object-entry-or-in-a-specific-folder-from-documents-and-media=The files can be stored in a object entry or in a specific folder from Documents and Media. (Automatic Copy)
 the-files-were-imported-correctly=Els fitxers s'han importat correctament.
 the-firm-cannot-be-deleted-because-it-has-associated-projects=L'empresa no es pot suprimir perquè té projectes associats.
 the-firm-could-not-be-found=No s'ha trobat la companyia.
@@ -16505,6 +16507,7 @@ upload-another-file=Penja un altre fitxer
 upload-certificate=Penja el certificat
 upload-completed=S'ha completat la transferència
 upload-definition=Penja la definició
+upload-directly-from-users-computer=Upload Directly from the User's Computer Computer (Automatic Copy)
 upload-document=Penja el document
 upload-documents-no-larger-than-3000-k=No pengeu documents més grans de 3.000 KB.
 upload-documents-no-larger-than-x=No pengeu documents més grans de {0}.
