--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_cs.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_cs.properties
@@ -12400,6 +12400,7 @@ request-courier=Vyžádá se kurýr (Automatic Translation)
 request-details=Podrobnosti žádosti (Automatic Translation)
 request-details-full=Podrobnosti požadavku jsou úplné (Automatic Translation)
 request-details-minimal=Minimální podrobnosti požadavku (Automatic Translation)
+request-files=Request Files (Automatic Copy)
 request-header-auto-login-configuration-name=Hlavička požadavku na automatické přihlášení (Automatic Translation)
 request-holiday=Požádat o dovolenou
 request-is-larger-than-x-and-could-not-be-processed=Request is larger than {0} and could not be processed. (Automatic Copy)
@@ -14857,6 +14858,7 @@ the-file-was-processed-correctly=Soubor byl zpracován správně. (Automatic Tra
 the-file-x-cannot-be-imported=Soubor <em>{0}</em> nemůže být importován.
 the-file-x-cannot-be-inspected=The file {0} cannot be inspected. (Automatic Copy)
 the-file-x-cannot-be-saved=Soubor <em>{0}</em> nemůže být uložen.
+the-files-can-be-stored-in-a-object-entry-or-in-a-specific-folder-from-documents-and-media=The files can be stored in a object entry or in a specific folder from Documents and Media. (Automatic Copy)
 the-files-were-imported-correctly=Soubory byly importovány správně. (Automatic Translation)
 the-firm-cannot-be-deleted-because-it-has-associated-projects=Firma nemůže být smazána, neboť je asociována s projektem.
 the-firm-could-not-be-found=Firma nebyla nalezena.
@@ -16503,6 +16505,7 @@ upload-another-file=Upload Another File (Automatic Copy)
 upload-certificate=Odeslat certifikát (Automatic Translation)
 upload-completed=Nahrávání dokončeno
 upload-definition=Nahrát definici
+upload-directly-from-users-computer=Upload Directly from the User's Computer Computer (Automatic Copy)
 upload-document=Nahrát dokument
 upload-documents-no-larger-than-3000-k=Nahrát dokumenty ne větší než 3000k. (Automatic Translation)
 upload-documents-no-larger-than-x=Není možno nahrát větší dokumenty než {0}.
