--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_da.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_da.properties
@@ -12400,6 +12400,7 @@ request-courier=Anmod om kurer (Automatic Translation)
 request-details=Oplysninger om anmodning (Automatic Translation)
 request-details-full=Oplysninger om anmodning er fulde (Automatic Translation)
 request-details-minimal=Oplysninger om anmodning minimal (Automatic Translation)
+request-files=Request Files (Automatic Copy)
 request-header-auto-login-configuration-name=Anmodningsheader til automatisk logon (Automatic Translation)
 request-holiday=Request Holiday (Automatic Copy)
 request-is-larger-than-x-and-could-not-be-processed=Request is larger than {0} and could not be processed. (Automatic Copy)
@@ -14857,6 +14858,7 @@ the-file-was-processed-correctly=Filen blev behandlet korrekt. (Automatic Transl
 the-file-x-cannot-be-imported=The file <em>{0}</em> cannot be imported. (Automatic Copy)
 the-file-x-cannot-be-inspected=The file {0} cannot be inspected. (Automatic Copy)
 the-file-x-cannot-be-saved=The file <em>{0}</em> cannot be saved. (Automatic Copy)
+the-files-can-be-stored-in-a-object-entry-or-in-a-specific-folder-from-documents-and-media=The files can be stored in a object entry or in a specific folder from Documents and Media. (Automatic Copy)
 the-files-were-imported-correctly=Filerne blev importeret korrekt. (Automatic Translation)
 the-firm-cannot-be-deleted-because-it-has-associated-projects=The firm cannot be deleted because it has associated projects. (Automatic Copy)
 the-firm-could-not-be-found=The webindhold could not be found.
@@ -16503,6 +16505,7 @@ upload-another-file=Upload Another File (Automatic Copy)
 upload-certificate=Overfør certifikat (Automatic Translation)
 upload-completed=Overførsel Completed
 upload-definition=Upload Definition (Automatic Copy)
+upload-directly-from-users-computer=Upload Directly from the User's Computer Computer (Automatic Copy)
 upload-document=Overfør Document
 upload-documents-no-larger-than-3000-k=Overfør dokumenter, der ikke er større end 3.000.000. (Automatic Translation)
 upload-documents-no-larger-than-x=Overfør documents no larger than {0}.
