--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_el.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_el.properties
@@ -12400,6 +12400,7 @@ request-courier=Αίτημα Ταχυμεταφοράς (Automatic Translation)
 request-details=Λεπτομέρειες αιτήματος (Automatic Translation)
 request-details-full=Πλήρη στοιχεία αιτήματος (Automatic Translation)
 request-details-minimal=Λεπτομέρειες αιτήματος Ελάχιστες (Automatic Translation)
+request-files=Request Files (Automatic Copy)
 request-header-auto-login-configuration-name=Αυτόματη κεφαλίδα αιτήματος σύνδεσης (Automatic Translation)
 request-holiday=Αίτημα διακοπών
 request-is-larger-than-x-and-could-not-be-processed=Request is larger than {0} and could not be processed. (Automatic Copy)
@@ -14857,6 +14858,7 @@ the-file-was-processed-correctly=Η επεξεργασία του αρχείου
 the-file-x-cannot-be-imported=The file <em>{0}</em> cannot be imported. (Automatic Copy)
 the-file-x-cannot-be-inspected=The file {0} cannot be inspected. (Automatic Copy)
 the-file-x-cannot-be-saved=The file <em>{0}</em> cannot be saved. (Automatic Copy)
+the-files-can-be-stored-in-a-object-entry-or-in-a-specific-folder-from-documents-and-media=The files can be stored in a object entry or in a specific folder from Documents and Media. (Automatic Copy)
 the-files-were-imported-correctly=Τα αρχεία εισήχθησαν σωστά. (Automatic Translation)
 the-firm-cannot-be-deleted-because-it-has-associated-projects=Η εταιρεία δεν μπορεί να διαγραφεί διότι έχει συσχετισμένα έργα.
 the-firm-could-not-be-found=Η εταιρεία δεν βρέθηκε.
@@ -16503,6 +16505,7 @@ upload-another-file=Upload Another File (Automatic Copy)
 upload-certificate=Αποστολή πιστοποιητικού (Automatic Translation)
 upload-completed=Το ανέβασμα ολοκληρώθηκε
 upload-definition=Ορισμός αποστολής (Automatic Translation)
+upload-directly-from-users-computer=Upload Directly from the User's Computer Computer (Automatic Copy)
 upload-document=Ανέβασμα εγγράφου
 upload-documents-no-larger-than-3000-k=Ανεβάστε έγγραφα όχι μεγαλύτερα από 3.000k. (Automatic Translation)
 upload-documents-no-larger-than-x=Ανεβάστε έγγραφα όχι μεγαλυτέρα από {0}.
