--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es.properties
@@ -12402,6 +12402,7 @@ request-courier=Solicitar empresa de transportes
 request-details=Detalles de la petición
 request-details-full=Detalles completos de la petición
 request-details-minimal=Detalles mínimos de la petición
+request-files=Request Files (Automatic Copy)
 request-header-auto-login-configuration-name=Cabecera de solicitud para inicio de sesión automático
 request-holiday=Solicitar vacaciones
 request-is-larger-than-x-and-could-not-be-processed=La solicitud es mayor que {0} y no ha podido ser procesada.
@@ -14859,6 +14860,7 @@ the-file-was-processed-correctly=El archivo se procesó correctamente.
 the-file-x-cannot-be-imported=El archivo <em>{0}</em> no puede importarse.
 the-file-x-cannot-be-inspected=No se puede inspeccionar el archivo {0}.
 the-file-x-cannot-be-saved=El archivo <em>{0}</em> no puede guardarse.
+the-files-can-be-stored-in-a-object-entry-or-in-a-specific-folder-from-documents-and-media=The files can be stored in a object entry or in a specific folder from Documents and Media. (Automatic Copy)
 the-files-were-imported-correctly=Los archivos se importaron correctamente.
 the-firm-cannot-be-deleted-because-it-has-associated-projects=La compañía no puede ser eliminada porque tiene proyectos asociados.
 the-firm-could-not-be-found=No se ha encontrado esa compañía.
@@ -16505,6 +16507,7 @@ upload-another-file=Cargar otro archivo
 upload-certificate=Cargar certificado
 upload-completed=Transferencia completada
 upload-definition=Subir definición
+upload-directly-from-users-computer=Upload Directly from the User's Computer Computer (Automatic Copy)
 upload-document=Subir documento
 upload-documents-no-larger-than-3000-k=Cargue documentos con un tamaño inferior a 3000 KB.
 upload-documents-no-larger-than-x=Los documentos deben ser menores de {0}.
