--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_et.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_et.properties
@@ -12400,6 +12400,7 @@ request-courier=Küsi kullerit (Automatic Translation)
 request-details=Taotluse üksikasjad (Automatic Translation)
 request-details-full=Taotluse üksikasjad on täielikud (Automatic Translation)
 request-details-minimal=Taotluse üksikasjad minimaalsed (Automatic Translation)
+request-files=Request Files (Automatic Copy)
 request-header-auto-login-configuration-name=Automaatse sisselogimistaotluse päis (Automatic Translation)
 request-holiday=Küsi puhkust
 request-is-larger-than-x-and-could-not-be-processed=Request is larger than {0} and could not be processed. (Automatic Copy)
@@ -14857,6 +14858,7 @@ the-file-was-processed-correctly=Faili töödeldi õigesti. (Automatic Translati
 the-file-x-cannot-be-imported=The file <em>{0}</em> cannot be imported. (Automatic Copy)
 the-file-x-cannot-be-inspected=The file {0} cannot be inspected. (Automatic Copy)
 the-file-x-cannot-be-saved=The file <em>{0}</em> cannot be saved. (Automatic Copy)
+the-files-can-be-stored-in-a-object-entry-or-in-a-specific-folder-from-documents-and-media=The files can be stored in a object entry or in a specific folder from Documents and Media. (Automatic Copy)
 the-files-were-imported-correctly=Failid imporditi õigesti. (Automatic Translation)
 the-firm-cannot-be-deleted-because-it-has-associated-projects=Firmat ei saa kustutada, kuna sellega on seotud projektid.
 the-firm-could-not-be-found=Firmat ei leitud.
@@ -16503,6 +16505,7 @@ upload-another-file=Upload Another File (Automatic Copy)
 upload-certificate=Laadi sert üles (Automatic Translation)
 upload-completed=Üleslaadimine lõpetatud
 upload-definition=Laadi definitsioon üles (Automatic Translation)
+upload-directly-from-users-computer=Upload Directly from the User's Computer Computer (Automatic Copy)
 upload-document=Laadi üles dokument
 upload-documents-no-larger-than-3000-k=Laadige üles kuni 3000 k. (Automatic Translation)
 upload-documents-no-larger-than-x=Laadi üles dokumendid, mille suurus on kuni {0}.
