--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
@@ -12399,6 +12399,7 @@ request-courier=Pyydä Kuriiri
 request-details=Pyydä tietoja
 request-details-full=Pyydä täydellisiä tietoja
 request-details-minimal=Pyydä minimitietoja
+request-files=Request Files (Automatic Copy)
 request-header-auto-login-configuration-name=Automaattisen sisäänkirjautumisen pyynnön otsikkotieto
 request-holiday=Pyydä lomaa
 request-is-larger-than-x-and-could-not-be-processed=Pyyntö on suurempi kuin {0} eikä sitä voidä käsitellä.
@@ -14855,6 +14856,7 @@ the-file-was-processed-correctly=Tiedosto käsiteltiin oikein.
 the-file-x-cannot-be-imported=Tiedostoa <em>{0}</em> ei voi tuoda.
 the-file-x-cannot-be-inspected=Tiedostoa {0} ei voi tarkastaa.
 the-file-x-cannot-be-saved=Tiedostoa <em>{0}</em> ei voi tallentaa.
+the-files-can-be-stored-in-a-object-entry-or-in-a-specific-folder-from-documents-and-media=The files can be stored in a object entry or in a specific folder from Documents and Media. (Automatic Copy)
 the-files-were-imported-correctly=Tiedostot tuotiin oikein.
 the-firm-cannot-be-deleted-because-it-has-associated-projects=Yritystä ei voi poistaa koska siihen liittyy projekteja.
 the-firm-could-not-be-found=Yritystä ei löydy.
@@ -16501,6 +16503,7 @@ upload-another-file=Lataa toinen tiedosto
 upload-certificate=Lataa Varmenne
 upload-completed=Lataus valmis
 upload-definition=Päivitä määrittely
+upload-directly-from-users-computer=Upload Directly from the User's Computer Computer (Automatic Copy)
 upload-document=Lataa dokumentti
 upload-documents-no-larger-than-3000-k=Lataa dokumentteja, jotka eivät ole suurempia kuin 3 000 kt.
 upload-documents-no-larger-than-x=Lataa dokumentteja, jotka eivät ole suurempia kuin {0}.
