--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hu.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hu.properties
@@ -12403,6 +12403,7 @@ request-courier=Futárkérés
 request-details=Kérelem adatai
 request-details-full=Kérelem részletes adatai
 request-details-minimal=Kérelem minimális adatai
+request-files=Request Files (Automatic Copy)
 request-header-auto-login-configuration-name=Automatikus belépés kérés fejléc
 request-holiday=Szünnap igénylése
 request-is-larger-than-x-and-could-not-be-processed=A kérés nagyobb, mint {0}, és nem feldolgozható.
@@ -14860,6 +14861,7 @@ the-file-was-processed-correctly=A fájl feldolgozása sikeres volt.
 the-file-x-cannot-be-imported=A(z) <em>{0}</em> fájl nem importálható.
 the-file-x-cannot-be-inspected=A {0} fájl nem vizsgálható.
 the-file-x-cannot-be-saved=A(z) <em>{0}</em> fájl nem menthető.
+the-files-can-be-stored-in-a-object-entry-or-in-a-specific-folder-from-documents-and-media=The files can be stored in a object entry or in a specific folder from Documents and Media. (Automatic Copy)
 the-files-were-imported-correctly=A fájlok importálása sikeres volt.
 the-firm-cannot-be-deleted-because-it-has-associated-projects=A cég nem törölhető, mert projektek tartoznak hozzá.
 the-firm-could-not-be-found=A cég nem található.
@@ -16506,6 +16508,7 @@ upload-another-file=Másik fájl feltöltése
 upload-certificate=Tanúsítvány feltöltése
 upload-completed=A feltöltés kész
 upload-definition=Definíció frissítése
+upload-directly-from-users-computer=Upload Directly from the User's Computer Computer (Automatic Copy)
 upload-document=Dokumentum feltöltése
 upload-documents-no-larger-than-3000-k=A feltölthető dokumentumok maximális mérete 3000 kB.
 upload-documents-no-larger-than-x=A feltölthető dokumentumok maximális mérete: {0}.
