--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_in.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_in.properties
@@ -12400,6 +12400,7 @@ request-courier=Minta Kurir (Automatic Translation)
 request-details=Minta Detil (Automatic Translation)
 request-details-full=Minta Rincian Lengkap (Automatic Translation)
 request-details-minimal=Permintaan Detail Minimal (Automatic Translation)
+request-files=Request Files (Automatic Copy)
 request-header-auto-login-configuration-name=Header Permintaan Login Otomatis (Automatic Translation)
 request-holiday=Permintaan Holiday
 request-is-larger-than-x-and-could-not-be-processed=Request is larger than {0} and could not be processed. (Automatic Copy)
@@ -14857,6 +14858,7 @@ the-file-was-processed-correctly=Berkas ini telah diproses dengan benar. (Automa
 the-file-x-cannot-be-imported=The file <em>{0}</em> cannot be imported. (Automatic Copy)
 the-file-x-cannot-be-inspected=The file {0} cannot be inspected. (Automatic Copy)
 the-file-x-cannot-be-saved=The file <em>{0}</em> cannot be saved. (Automatic Copy)
+the-files-can-be-stored-in-a-object-entry-or-in-a-specific-folder-from-documents-and-media=The files can be stored in a object entry or in a specific folder from Documents and Media. (Automatic Copy)
 the-files-were-imported-correctly=Berkas diimpor dengan benar. (Automatic Translation)
 the-firm-cannot-be-deleted-because-it-has-associated-projects=Perusahaan tidak dapat dihapus karena memiliki proyek terkait.
 the-firm-could-not-be-found=Perusahaan tidak dapat ditemukan.
@@ -16503,6 +16505,7 @@ upload-another-file=Upload Another File (Automatic Copy)
 upload-certificate=Unggah Sertifikat (Automatic Translation)
 upload-completed=Upload Selesai
 upload-definition=Definisi Unggah (Automatic Translation)
+upload-directly-from-users-computer=Upload Directly from the User's Computer Computer (Automatic Copy)
 upload-document=Upload Dokumen
 upload-documents-no-larger-than-3000-k=Unggah dokumen tidak lebih besar dari 3, 000k. (Automatic Translation)
 upload-documents-no-larger-than-x=Meng-Upload dokumen tidak lebih besar dari{0}.
