--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_it.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_it.properties
@@ -12401,6 +12401,7 @@ request-courier=Richiedi Corriere (Automatic Translation)
 request-details=Dettagli richiesta (Automatic Translation)
 request-details-full=Dettagli richiesta completi (Automatic Translation)
 request-details-minimal=Dettagli richiesta Minimo (Automatic Translation)
+request-files=Request Files (Automatic Copy)
 request-header-auto-login-configuration-name=Header della Richiesta per Auto Login
 request-holiday=Richiesta di Vacanze
 request-is-larger-than-x-and-could-not-be-processed=La richiesta è più grande di {0} e non può essere elaborata.
@@ -14858,6 +14859,7 @@ the-file-was-processed-correctly=Il file è stato elaborato correttamente. (Auto
 the-file-x-cannot-be-imported=Il file <em>{0}</em> non può essere importato.
 the-file-x-cannot-be-inspected=The file {0} cannot be inspected. (Automatic Copy)
 the-file-x-cannot-be-saved=Il file <em>{0}</em> non può essere salvato.
+the-files-can-be-stored-in-a-object-entry-or-in-a-specific-folder-from-documents-and-media=The files can be stored in a object entry or in a specific folder from Documents and Media. (Automatic Copy)
 the-files-were-imported-correctly=File importati correttamente.
 the-firm-cannot-be-deleted-because-it-has-associated-projects=La ditta non può essere cancellata perché ha dei progetti associati.
 the-firm-could-not-be-found=La ditta non è stata trovata.
@@ -16504,6 +16506,7 @@ upload-another-file=Upload Another File (Automatic Copy)
 upload-certificate=Carica certificato (Automatic Translation)
 upload-completed=Caricamento Completato
 upload-definition=Carica Definizione
+upload-directly-from-users-computer=Upload Directly from the User's Computer Computer (Automatic Copy)
 upload-document=Carica Documento
 upload-documents-no-larger-than-3000-k=Carica documenti non più grandi di 3.000k. (Automatic Translation)
 upload-documents-no-larger-than-x=Carica documenti non superiori a {0}.
