--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_iw.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_iw.properties
@@ -12400,6 +12400,7 @@ request-courier=בקש שליח
 request-details=פרטי בקשה (Automatic Translation)
 request-details-full=פרטי בקשה מלאים (Automatic Translation)
 request-details-minimal=פרטי בקשה מינימליים (Automatic Translation)
+request-files=Request Files (Automatic Copy)
 request-header-auto-login-configuration-name=כותרת בקשת כניסה אוטומטית
 request-holiday=בקש חופש
 request-is-larger-than-x-and-could-not-be-processed=הבקשה גדולה מ-{0} ולא ניתן לעבד אותה.
@@ -14857,6 +14858,7 @@ the-file-was-processed-correctly=הקובץ עובד כראוי. (Automatic Tran
 the-file-x-cannot-be-imported=לא ניתן לייבא את הקובץ (<em>{0}</em>).
 the-file-x-cannot-be-inspected=The file {0} cannot be inspected. (Automatic Copy)
 the-file-x-cannot-be-saved=לא ניתן לשמור את הקובץ (<em>{0}</em>).
+the-files-can-be-stored-in-a-object-entry-or-in-a-specific-folder-from-documents-and-media=The files can be stored in a object entry or in a specific folder from Documents and Media. (Automatic Copy)
 the-files-were-imported-correctly=הקבצים יובאו כהלכה.
 the-firm-cannot-be-deleted-because-it-has-associated-projects=החברה לא יכולה להמחק כיוון שיש לה פרוייקטים מקושרים
 the-firm-could-not-be-found=החברה לא נמצאה
@@ -16503,6 +16505,7 @@ upload-another-file=Upload Another File (Automatic Copy)
 upload-certificate=העלה אישור
 upload-completed=ההעלאה הושלמה
 upload-definition=העלה הגדרה
+upload-directly-from-users-computer=Upload Directly from the User's Computer Computer (Automatic Copy)
 upload-document=העלה מסמך
 upload-documents-no-larger-than-3000-k=העלאת מסמכים לא גדולים מ-3, 000k. (Automatic Translation)
 upload-documents-no-larger-than-x=העלה מסמכים שאינם גדולים מ-{0}.
