--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ko.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ko.properties
@@ -12400,6 +12400,7 @@ request-courier=택배 요청 (Automatic Translation)
 request-details=자세한 정보 요청 (Automatic Translation)
 request-details-full=요청 세부 정보 전체 (Automatic Translation)
 request-details-minimal=요청 세부 정보 최소화 (Automatic Translation)
+request-files=Request Files (Automatic Copy)
 request-header-auto-login-configuration-name=자동 로그인 요청 헤더 (Automatic Translation)
 request-holiday=요구 휴일
 request-is-larger-than-x-and-could-not-be-processed=Request is larger than {0} and could not be processed. (Automatic Copy)
@@ -14856,6 +14857,7 @@ the-file-was-processed-correctly=파일이 올바르게 처리되었습니다. (
 the-file-x-cannot-be-imported=The file <em>{0}</em> cannot be imported. (Automatic Copy)
 the-file-x-cannot-be-inspected=The file {0} cannot be inspected. (Automatic Copy)
 the-file-x-cannot-be-saved=The file <em>{0}</em> cannot be saved. (Automatic Copy)
+the-files-can-be-stored-in-a-object-entry-or-in-a-specific-folder-from-documents-and-media=The files can be stored in a object entry or in a specific folder from Documents and Media. (Automatic Copy)
 the-files-were-imported-correctly=파일이 올바르게 가져온 것입니다. (Automatic Translation)
 the-firm-cannot-be-deleted-because-it-has-associated-projects=계획사업을 회합했기 때문에 상사는
 the-firm-could-not-be-found=상사는 발견될 수 없었다.
@@ -16502,6 +16504,7 @@ upload-another-file=Upload Another File (Automatic Copy)
 upload-certificate=인증서 업로드 (Automatic Translation)
 upload-completed=완료되는 올려주기
 upload-definition=정의 업로드 (Automatic Translation)
+upload-directly-from-users-computer=Upload Directly from the User's Computer Computer (Automatic Copy)
 upload-document=올려주기 문서
 upload-documents-no-larger-than-3000-k=3,000k 이하의 문서를 업로드합니다. (Automatic Translation)
 upload-documents-no-larger-than-x=Upload documents no larger than {0}. (Automatic Copy)
