--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_lt.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_lt.properties
@@ -12400,6 +12400,7 @@ request-courier=Prašyti kurjerio (Automatic Translation)
 request-details=Užklausos informacija (Automatic Translation)
 request-details-full=Išsami užklausos informacija (Automatic Translation)
 request-details-minimal=Užklausos informacija minimali (Automatic Translation)
+request-files=Request Files (Automatic Copy)
 request-header-auto-login-configuration-name=Automatinio prisijungimo užklausos antraštė (Automatic Translation)
 request-holiday=Prašyti atostogų (Automatic Translation)
 request-is-larger-than-x-and-could-not-be-processed=Request is larger than {0} and could not be processed. (Automatic Copy)
@@ -14857,6 +14858,7 @@ the-file-was-processed-correctly=Failas apdorotas teisingai. (Automatic Translat
 the-file-x-cannot-be-imported=The file <em>{0}</em> cannot be imported. (Automatic Copy)
 the-file-x-cannot-be-inspected=The file {0} cannot be inspected. (Automatic Copy)
 the-file-x-cannot-be-saved=The file <em>{0}</em> cannot be saved. (Automatic Copy)
+the-files-can-be-stored-in-a-object-entry-or-in-a-specific-folder-from-documents-and-media=The files can be stored in a object entry or in a specific folder from Documents and Media. (Automatic Copy)
 the-files-were-imported-correctly=Failai buvo importuoti teisingai. (Automatic Translation)
 the-firm-cannot-be-deleted-because-it-has-associated-projects=Įmonės panaikinti negalima, nes ji turi susietų projektų. (Automatic Translation)
 the-firm-could-not-be-found=Nepavyko rasti įmonės. (Automatic Translation)
@@ -16503,6 +16505,7 @@ upload-another-file=Upload Another File (Automatic Copy)
 upload-certificate=Nusiųsti sertifikatą (Automatic Translation)
 upload-completed=Nusiųsti baigta (Automatic Translation)
 upload-definition=Nusiuntimo apibrėžimas (Automatic Translation)
+upload-directly-from-users-computer=Upload Directly from the User's Computer Computer (Automatic Copy)
 upload-document=Nusiųsti dokumentą (Automatic Translation)
 upload-documents-no-larger-than-3000-k=Įkelkite dokumentus, ne didesnius kaip 3 000k. (Automatic Translation)
 upload-documents-no-larger-than-x=Upload documents no larger than {0}. (Automatic Copy)
