--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nb.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nb.properties
@@ -12400,6 +12400,7 @@ request-courier=Be om bud (Automatic Translation)
 request-details=Detaljer for forespørsel (Automatic Translation)
 request-details-full=Forespørselsdetaljer er fulle (Automatic Translation)
 request-details-minimal=Minste forespørselsdetaljer (Automatic Translation)
+request-files=Request Files (Automatic Copy)
 request-header-auto-login-configuration-name=Automatisk påloggingsforespørselshode (Automatic Translation)
 request-holiday=Etterspør ferie
 request-is-larger-than-x-and-could-not-be-processed=Request is larger than {0} and could not be processed. (Automatic Copy)
@@ -14857,6 +14858,7 @@ the-file-was-processed-correctly=Filen ble behandlet på riktig måte. (Automati
 the-file-x-cannot-be-imported=Filen <em>{0}</em> kan ikke importeres.
 the-file-x-cannot-be-inspected=The file {0} cannot be inspected. (Automatic Copy)
 the-file-x-cannot-be-saved=Filen <em>{0}</em> kan ikke lagres.
+the-files-can-be-stored-in-a-object-entry-or-in-a-specific-folder-from-documents-and-media=The files can be stored in a object entry or in a specific folder from Documents and Media. (Automatic Copy)
 the-files-were-imported-correctly=Filene ble importert.
 the-firm-cannot-be-deleted-because-it-has-associated-projects=Firmaet kan ikke slettes da det har assosierte prosjekt.
 the-firm-could-not-be-found=Firmaet ble ikke funnet.
@@ -16503,6 +16505,7 @@ upload-another-file=Upload Another File (Automatic Copy)
 upload-certificate=Last opp sertifikat (Automatic Translation)
 upload-completed=Opplastning utført
 upload-definition=Last opp definisjon
+upload-directly-from-users-computer=Upload Directly from the User's Computer Computer (Automatic Copy)
 upload-document=Last opp dokument
 upload-documents-no-larger-than-3000-k=Last opp dokumenter som ikke er større enn 3000 k. (Automatic Translation)
 upload-documents-no-larger-than-x=Last opp dokumenter som ikke er større enn {0}.
