--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl_BE.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl_BE.properties
@@ -12403,6 +12403,7 @@ request-courier=Request Courier (Automatic Copy)
 request-details=Request Details (Automatic Copy)
 request-details-full=Request Details Full (Automatic Copy)
 request-details-minimal=Request Details Minimal (Automatic Copy)
+request-files=Request Files (Automatic Copy)
 request-header-auto-login-configuration-name=Auto Login Request Header (Automatic Copy)
 request-holiday=Vakantie verzoeken
 request-is-larger-than-x-and-could-not-be-processed=Request is larger than {0} and could not be processed. (Automatic Copy)
@@ -14860,6 +14861,7 @@ the-file-was-processed-correctly=The file was processed correctly. (Automatic Co
 the-file-x-cannot-be-imported=The file <em>{0}</em> cannot be imported. (Automatic Copy)
 the-file-x-cannot-be-inspected=The file {0} cannot be inspected. (Automatic Copy)
 the-file-x-cannot-be-saved=The file <em>{0}</em> cannot be saved. (Automatic Copy)
+the-files-can-be-stored-in-a-object-entry-or-in-a-specific-folder-from-documents-and-media=The files can be stored in a object entry or in a specific folder from Documents and Media. (Automatic Copy)
 the-files-were-imported-correctly=The files were imported correctly. (Automatic Copy)
 the-firm-cannot-be-deleted-because-it-has-associated-projects=Het bedrijf kan niet worden verwijderd omdat het gekoppelde projecten heeft.
 the-firm-could-not-be-found=Het bedrijf kon niet worden gevonden.
@@ -16506,6 +16508,7 @@ upload-another-file=Upload Another File (Automatic Copy)
 upload-certificate=Upload Certificate (Automatic Copy)
 upload-completed=Uploaden voltooid
 upload-definition=Upload Definition (Automatic Copy)
+upload-directly-from-users-computer=Upload Directly from the User's Computer Computer (Automatic Copy)
 upload-document=Document uploaden
 upload-documents-no-larger-than-3000-k=Upload documents no larger than 3,000k. (Automatic Copy)
 upload-documents-no-larger-than-x=Upload documenten niet groter dan {0}.
