--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pl.properties
@@ -12400,6 +12400,7 @@ request-courier=Poproś kuriera (Automatic Translation)
 request-details=Szczegóły żądania (Automatic Translation)
 request-details-full=Szczegóły żądania Pełne (Automatic Translation)
 request-details-minimal=Minimalne szczegóły żądania (Automatic Translation)
+request-files=Request Files (Automatic Copy)
 request-header-auto-login-configuration-name=Nagłówek automatycznego logowania (Automatic Translation)
 request-holiday=Wniosek urlopowy
 request-is-larger-than-x-and-could-not-be-processed=Request is larger than {0} and could not be processed. (Automatic Copy)
@@ -14857,6 +14858,7 @@ the-file-was-processed-correctly=Plik został poprawnie przetworzony. (Automatic
 the-file-x-cannot-be-imported=Plik <em>{0}</em> nie może być zaimportowany.
 the-file-x-cannot-be-inspected=The file {0} cannot be inspected. (Automatic Copy)
 the-file-x-cannot-be-saved=Plik <em>{0}</em> nie może być zapisany.
+the-files-can-be-stored-in-a-object-entry-or-in-a-specific-folder-from-documents-and-media=The files can be stored in a object entry or in a specific folder from Documents and Media. (Automatic Copy)
 the-files-were-imported-correctly=Pliki zostały poprawnie zaimportowane. (Automatic Translation)
 the-firm-cannot-be-deleted-because-it-has-associated-projects=Nie można usunąć firmy, ponieważ są z nią skojarzone projekty.
 the-firm-could-not-be-found=Firma nie została znaleziona.
@@ -16503,6 +16505,7 @@ upload-another-file=Upload Another File (Automatic Copy)
 upload-certificate=Przekaż certyfikat (Automatic Translation)
 upload-completed=Ładowanie zakończone
 upload-definition=Wgraj definicje
+upload-directly-from-users-computer=Upload Directly from the User's Computer Computer (Automatic Copy)
 upload-document=Załaduj dokument
 upload-documents-no-larger-than-3000-k=Prześlij dokumenty nie większe niż 3000k. (Automatic Translation)
 upload-documents-no-larger-than-x=Załaduj dokumenty nie większe niż {0}.
