--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
@@ -12400,6 +12400,7 @@ request-courier=Solicitação de Mensageiro
 request-details=Detalhes de solicitação
 request-details-full=Detalhes de solicitação completos
 request-details-minimal=Detalhes de solicitação mínimo
+request-files=Request Files (Automatic Copy)
 request-header-auto-login-configuration-name=Cabeçalho de Solicitação de Login Automático
 request-holiday=Requisitar férias
 request-is-larger-than-x-and-could-not-be-processed=A solicitação é maior que {0} e não pôde ser processada.
@@ -14857,6 +14858,7 @@ the-file-was-processed-correctly=O arquivo foi processado corretamente.
 the-file-x-cannot-be-imported=O arquivo <em>{0}</em> não pode ser importado.
 the-file-x-cannot-be-inspected=O arquivo {0} não pode ser inspecionado.
 the-file-x-cannot-be-saved=O arquivo <em>{0}</em> não pode ser salvo.
+the-files-can-be-stored-in-a-object-entry-or-in-a-specific-folder-from-documents-and-media=The files can be stored in a object entry or in a specific folder from Documents and Media. (Automatic Copy)
 the-files-were-imported-correctly=Os arquivos foram importados corretamente.
 the-firm-cannot-be-deleted-because-it-has-associated-projects=A firma não pode ser excluída porque possui projetos associados.
 the-firm-could-not-be-found=A firma não pode ser encontrada.
@@ -16503,6 +16505,7 @@ upload-another-file=Fazer o upload de outro arquivo
 upload-certificate=Carregar Certificado
 upload-completed=Upload completo
 upload-definition=Enviar Definição
+upload-directly-from-users-computer=Upload Directly from the User's Computer Computer (Automatic Copy)
 upload-document=Upload de documento
 upload-documents-no-larger-than-3000-k=Os documentos devem ser menores que 3000k.
 upload-documents-no-larger-than-x=Os documentos devem ser menores que {0}.
