--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ro.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ro.properties
@@ -12400,6 +12400,7 @@ request-courier=Solicitare curier (Automatic Translation)
 request-details=Solicitare detalii (Automatic Translation)
 request-details-full=Solicitați detalii complete (Automatic Translation)
 request-details-minimal=Solicitare detalii minimale (Automatic Translation)
+request-files=Request Files (Automatic Copy)
 request-header-auto-login-configuration-name=Antet solicitare conectare automată (Automatic Translation)
 request-holiday=Cerere Concediu
 request-is-larger-than-x-and-could-not-be-processed=Request is larger than {0} and could not be processed. (Automatic Copy)
@@ -14857,6 +14858,7 @@ the-file-was-processed-correctly=Fișierul a fost procesat corect. (Automatic Tr
 the-file-x-cannot-be-imported=The file <em>{0}</em> cannot be imported. (Automatic Copy)
 the-file-x-cannot-be-inspected=The file {0} cannot be inspected. (Automatic Copy)
 the-file-x-cannot-be-saved=The file <em>{0}</em> cannot be saved. (Automatic Copy)
+the-files-can-be-stored-in-a-object-entry-or-in-a-specific-folder-from-documents-and-media=The files can be stored in a object entry or in a specific folder from Documents and Media. (Automatic Copy)
 the-files-were-imported-correctly=Fișierele au fost importate corect. (Automatic Translation)
 the-firm-cannot-be-deleted-because-it-has-associated-projects=Firma nu a putut fi stearsa pentru ca are proiecte asociate.
 the-firm-could-not-be-found=Firma nu a putut fi gasita.
@@ -16503,6 +16505,7 @@ upload-another-file=Upload Another File (Automatic Copy)
 upload-certificate=Încărcare certificat (Automatic Translation)
 upload-completed=Incarcare Termianta
 upload-definition=Definiție încărcare (Automatic Translation)
+upload-directly-from-users-computer=Upload Directly from the User's Computer Computer (Automatic Copy)
 upload-document=Incarca Document
 upload-documents-no-larger-than-3000-k=Încărcați documente nu mai mari de 3.000k. (Automatic Translation)
 upload-documents-no-larger-than-x=Incarca Document nu mai mare de {0}.
