--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ru.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ru.properties
@@ -12400,6 +12400,7 @@ request-courier=Запрос курьера (Automatic Translation)
 request-details=Запросить подробную информацию (Automatic Translation)
 request-details-full=Запрос Подробная информация Полная (Automatic Translation)
 request-details-minimal=Запрос Подробная информация Минимальная (Automatic Translation)
+request-files=Request Files (Automatic Copy)
 request-header-auto-login-configuration-name=Заголовок запроса авто входа (Automatic Translation)
 request-holiday=Запрос выходных
 request-is-larger-than-x-and-could-not-be-processed=Request is larger than {0} and could not be processed. (Automatic Copy)
@@ -14857,6 +14858,7 @@ the-file-was-processed-correctly=Файл был обработан правил
 the-file-x-cannot-be-imported=Файл <em>{0}</em> не может быть импортирован.
 the-file-x-cannot-be-inspected=The file {0} cannot be inspected. (Automatic Copy)
 the-file-x-cannot-be-saved=Файл <em>{0}</em> не может быть сохранен.
+the-files-can-be-stored-in-a-object-entry-or-in-a-specific-folder-from-documents-and-media=The files can be stored in a object entry or in a specific folder from Documents and Media. (Automatic Copy)
 the-files-were-imported-correctly=Файлы были импортированы правильно. (Automatic Translation)
 the-firm-cannot-be-deleted-because-it-has-associated-projects=Фирма не может быть удалена, так как она имеет ассоциированные проекты.
 the-firm-could-not-be-found=Фирма не найдена.
@@ -16503,6 +16505,7 @@ upload-another-file=Upload Another File (Automatic Copy)
 upload-certificate=Сертификат загрузки (Automatic Translation)
 upload-completed=Загрузка завершена
 upload-definition=Обновить определение
+upload-directly-from-users-computer=Upload Directly from the User's Computer Computer (Automatic Copy)
 upload-document=Загрузить документ
 upload-documents-no-larger-than-3000-k=Загрузка документов не более 3000k. (Automatic Translation)
 upload-documents-no-larger-than-x=Загрузите документы размером не более {0}.
