--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sk.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sk.properties
@@ -12400,6 +12400,7 @@ request-courier=Požiadať kuriéra (Automatic Translation)
 request-details=Podrobnosti požiadavky (Automatic Translation)
 request-details-full=Podrobnosti požiadavky úplné (Automatic Translation)
 request-details-minimal=Podrobnosti požiadavky minimálne (Automatic Translation)
+request-files=Request Files (Automatic Copy)
 request-header-auto-login-configuration-name=Request hlavička automatického prihlasovania
 request-holiday=Požiadať o volno
 request-is-larger-than-x-and-could-not-be-processed=Request is larger than {0} and could not be processed. (Automatic Copy)
@@ -14857,6 +14858,7 @@ the-file-was-processed-correctly=Súbor bol spracovaný správne. (Automatic Tra
 the-file-x-cannot-be-imported=Súbor <em>{0}</em> sa nedá importovať.
 the-file-x-cannot-be-inspected=The file {0} cannot be inspected. (Automatic Copy)
 the-file-x-cannot-be-saved=Súbor <em>{0}</em> sa nedá uložiť.
+the-files-can-be-stored-in-a-object-entry-or-in-a-specific-folder-from-documents-and-media=The files can be stored in a object entry or in a specific folder from Documents and Media. (Automatic Copy)
 the-files-were-imported-correctly=Súbory boli importované správne. (Automatic Translation)
 the-firm-cannot-be-deleted-because-it-has-associated-projects=Firma nemôže byť zmazaná, pretože je asociovaná s existujúcimi projektami.
 the-firm-could-not-be-found=Firma nebola nájdená.
@@ -16503,6 +16505,7 @@ upload-another-file=Upload Another File (Automatic Copy)
 upload-certificate=Nahrať certifikát (Automatic Translation)
 upload-completed=Nahrávanie ukončené
 upload-definition=Nahrať definíciu
+upload-directly-from-users-computer=Upload Directly from the User's Computer Computer (Automatic Copy)
 upload-document=Nahrať dokument
 upload-documents-no-larger-than-3000-k=Nahrajte dokumenty, ktoré nie sú väčšie ako 3 000 k. (Automatic Translation)
 upload-documents-no-larger-than-x=Nahrajte dokumenty, ktoré niesú väčšie ako {0}.
