--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sl.properties
@@ -12400,6 +12400,7 @@ request-courier=Zahteva kurirja (Automatic Translation)
 request-details=Podrobnosti o zahtevi (Automatic Translation)
 request-details-full=Podrobnosti o zahtevi so polne (Automatic Translation)
 request-details-minimal=Zahtevaj podrobnosti Minimalna (Automatic Translation)
+request-files=Request Files (Automatic Copy)
 request-header-auto-login-configuration-name=Glava zahteve za samodejno prijavo (Automatic Translation)
 request-holiday=Zahtevaj praznik
 request-is-larger-than-x-and-could-not-be-processed=Request is larger than {0} and could not be processed. (Automatic Copy)
@@ -14857,6 +14858,7 @@ the-file-was-processed-correctly=Datoteka je bila pravilno obdelana. (Automatic 
 the-file-x-cannot-be-imported=The file <em>{0}</em> cannot be imported. (Automatic Copy)
 the-file-x-cannot-be-inspected=The file {0} cannot be inspected. (Automatic Copy)
 the-file-x-cannot-be-saved=The file <em>{0}</em> cannot be saved. (Automatic Copy)
+the-files-can-be-stored-in-a-object-entry-or-in-a-specific-folder-from-documents-and-media=The files can be stored in a object entry or in a specific folder from Documents and Media. (Automatic Copy)
 the-files-were-imported-correctly=Datoteke so bile pravilno uvožene. (Automatic Translation)
 the-firm-cannot-be-deleted-because-it-has-associated-projects=Podjetja ne morete izbrisati, ker je povezano z nekaterimi projekti.
 the-firm-could-not-be-found=Podjetja ni moč najti.
@@ -16503,6 +16505,7 @@ upload-another-file=Upload Another File (Automatic Copy)
 upload-certificate=Nalaganje potrdila (Automatic Translation)
 upload-completed=Prenos na strežnik končan
 upload-definition=Definicija prenosa (Automatic Translation)
+upload-directly-from-users-computer=Upload Directly from the User's Computer Computer (Automatic Copy)
 upload-document=Prenesi dokument
 upload-documents-no-larger-than-3000-k=Naložite dokumente, ki niso večji od 3000 k. (Automatic Translation)
 upload-documents-no-larger-than-x=Prenesi dokumente, ki niso večji kot {0}.
