--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sr_RS.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sr_RS.properties
@@ -12400,6 +12400,7 @@ request-courier=Request Courier (Automatic Copy)
 request-details=Request Details (Automatic Copy)
 request-details-full=Request Details Full (Automatic Copy)
 request-details-minimal=Request Details Minimal (Automatic Copy)
+request-files=Request Files (Automatic Copy)
 request-header-auto-login-configuration-name=Auto Login Request Header (Automatic Copy)
 request-holiday=Захтев за Одмор
 request-is-larger-than-x-and-could-not-be-processed=Request is larger than {0} and could not be processed. (Automatic Copy)
@@ -14857,6 +14858,7 @@ the-file-was-processed-correctly=The file was processed correctly. (Automatic Co
 the-file-x-cannot-be-imported=The file <em>{0}</em> cannot be imported. (Automatic Copy)
 the-file-x-cannot-be-inspected=The file {0} cannot be inspected. (Automatic Copy)
 the-file-x-cannot-be-saved=The file <em>{0}</em> cannot be saved. (Automatic Copy)
+the-files-can-be-stored-in-a-object-entry-or-in-a-specific-folder-from-documents-and-media=The files can be stored in a object entry or in a specific folder from Documents and Media. (Automatic Copy)
 the-files-were-imported-correctly=The files were imported correctly. (Automatic Copy)
 the-firm-cannot-be-deleted-because-it-has-associated-projects=Фирма не може бити обрисана зато што је у вези пројекатима.
 the-firm-could-not-be-found=Фирма није могла бити пронађена.
@@ -16503,6 +16505,7 @@ upload-another-file=Upload Another File (Automatic Copy)
 upload-certificate=Upload Certificate (Automatic Copy)
 upload-completed=Отпремање Завршено
 upload-definition=Upload Definition (Automatic Copy)
+upload-directly-from-users-computer=Upload Directly from the User's Computer Computer (Automatic Copy)
 upload-document=Отпремњен Документ
 upload-documents-no-larger-than-3000-k=Upload documents no larger than 3,000k. (Automatic Copy)
 upload-documents-no-larger-than-x=Отпреми докуменате који нису већи од {0}.
