--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
@@ -12400,6 +12400,7 @@ request-courier=Begär kurir
 request-details=Begäran om information
 request-details-full=Begäran om fullständig information
 request-details-minimal=Begäran om minimal information
+request-files=Request Files (Automatic Copy)
 request-header-auto-login-configuration-name=Rubrik för automatisk inloggningsförfrågan
 request-holiday=Begär semester
 request-is-larger-than-x-and-could-not-be-processed=Begäran är större än {0} och kunde inte bearbetas.
@@ -14857,6 +14858,7 @@ the-file-was-processed-correctly=Filen har bearbetats korrekt.
 the-file-x-cannot-be-imported=Det går inte att importera filen <em>{0}</em>.
 the-file-x-cannot-be-inspected=Det går inte att inspektera filen {0}.
 the-file-x-cannot-be-saved=Det går inte att spara filen <em><em></em>.
+the-files-can-be-stored-in-a-object-entry-or-in-a-specific-folder-from-documents-and-media=The files can be stored in a object entry or in a specific folder from Documents and Media. (Automatic Copy)
 the-files-were-imported-correctly=Filerna har importerats korrekt.
 the-firm-cannot-be-deleted-because-it-has-associated-projects=Företag som är relaterade till ett projekt kan inte raderas.
 the-firm-could-not-be-found=Företaget kunde inte hittas.
@@ -16503,6 +16505,7 @@ upload-another-file=Ladda upp en annan fil
 upload-certificate=Ladda upp certifikat
 upload-completed=Uppladdningen slutförd
 upload-definition=Överför definition
+upload-directly-from-users-computer=Upload Directly from the User's Computer Computer (Automatic Copy)
 upload-document=Ladda upp dokument
 upload-documents-no-larger-than-3000-k=Ladda upp dokument som inte är större än 3 000 kB.
 upload-documents-no-larger-than-x=Ladda upp dokument som inte är större än {0}.
