--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ta_IN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ta_IN.properties
@@ -12400,6 +12400,7 @@ request-courier=Request Courier (Automatic Copy)
 request-details=Request Details (Automatic Copy)
 request-details-full=Request Details Full (Automatic Copy)
 request-details-minimal=Request Details Minimal (Automatic Copy)
+request-files=Request Files (Automatic Copy)
 request-header-auto-login-configuration-name=Auto Login Request Header (Automatic Copy)
 request-holiday=விடுமுறை கோரிக்கை
 request-is-larger-than-x-and-could-not-be-processed=வேண்டுகோள் {0} விட பெரியது மற்றும் செயலாக்க முடியவில்லை.
@@ -14857,6 +14858,7 @@ the-file-was-processed-correctly=The file was processed correctly. (Automatic Co
 the-file-x-cannot-be-imported=<em> {0} </em> ஃபைலை இறக்குமதி செய்ய முடியாது.
 the-file-x-cannot-be-inspected=The file {0} cannot be inspected. (Automatic Copy)
 the-file-x-cannot-be-saved=<em> {0} </em> கோப்பை சேமிக்க முடியாது.
+the-files-can-be-stored-in-a-object-entry-or-in-a-specific-folder-from-documents-and-media=The files can be stored in a object entry or in a specific folder from Documents and Media. (Automatic Copy)
 the-files-were-imported-correctly=ஃபைல்கள் சரியாக import செய்யப்பட்டன.
 the-firm-cannot-be-deleted-because-it-has-associated-projects=The firm cannot be deleted because it has associated projects. (Automatic Copy)
 the-firm-could-not-be-found=Firm காணப்படவில்லை.
@@ -16503,6 +16505,7 @@ upload-another-file=Upload Another File (Automatic Copy)
 upload-certificate=Upload Certificate (Automatic Copy)
 upload-completed=பதிவேற்றம் முடிந்தது
 upload-definition=வரையறை இணைக்க
+upload-directly-from-users-computer=Upload Directly from the User's Computer Computer (Automatic Copy)
 upload-document=ஆவணத்தை பதிவேற்றவும்
 upload-documents-no-larger-than-3000-k=Upload documents no larger than 3,000k. (Automatic Copy)
 upload-documents-no-larger-than-x=ஆவணங்களை {0} விட பெரியதாக பதிவேற்றவும்.
