--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_tr.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_tr.properties
@@ -12400,6 +12400,7 @@ request-courier=Kurye İste (Automatic Translation)
 request-details=İstek Ayrıntıları (Automatic Translation)
 request-details-full=İstek Ayrıntıları Tam (Automatic Translation)
 request-details-minimal=İstek Ayrıntıları En Az (Automatic Translation)
+request-files=Request Files (Automatic Copy)
 request-header-auto-login-configuration-name=Otomatik Oturum Açma İsteği Üstbilgisi (Automatic Translation)
 request-holiday=Tatil İste
 request-is-larger-than-x-and-could-not-be-processed=Request is larger than {0} and could not be processed. (Automatic Copy)
@@ -14857,6 +14858,7 @@ the-file-was-processed-correctly=Dosya doğru işlendi. (Automatic Translation)
 the-file-x-cannot-be-imported=The file <em>{0}</em> cannot be imported. (Automatic Copy)
 the-file-x-cannot-be-inspected=The file {0} cannot be inspected. (Automatic Copy)
 the-file-x-cannot-be-saved=The file <em>{0}</em> cannot be saved. (Automatic Copy)
+the-files-can-be-stored-in-a-object-entry-or-in-a-specific-folder-from-documents-and-media=The files can be stored in a object entry or in a specific folder from Documents and Media. (Automatic Copy)
 the-files-were-imported-correctly=Dosyalar doğru şekilde alındı. (Automatic Translation)
 the-firm-cannot-be-deleted-because-it-has-associated-projects=Şirket silinemedi çünkü bağlantılı projelere sahip.
 the-firm-could-not-be-found=Şirket bulunamadı.
@@ -16503,6 +16505,7 @@ upload-another-file=Upload Another File (Automatic Copy)
 upload-certificate=SertifikaYı Karşıya Yükle (Automatic Translation)
 upload-completed=Yükleme Tamamlandı.
 upload-definition=Karşıya Yükleme Tanımı (Automatic Translation)
+upload-directly-from-users-computer=Upload Directly from the User's Computer Computer (Automatic Copy)
 upload-document=Belge Yükle.
 upload-documents-no-larger-than-3000-k=Belgeleri 3.000 binden büyük yüklemeyin. (Automatic Translation)
 upload-documents-no-larger-than-x={0} büyüklüğünden daha büyük dosya yüklemeyin.
