--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_uk.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_uk.properties
@@ -12400,6 +12400,7 @@ request-courier=Запит кур'єра (Automatic Translation)
 request-details=Відомості про запит (Automatic Translation)
 request-details-full=Запит подробиці повний (Automatic Translation)
 request-details-minimal=Мінімальний мінімальний запит відомостей (Automatic Translation)
+request-files=Request Files (Automatic Copy)
 request-header-auto-login-configuration-name=Заголовок запиту автоматичного входу (Automatic Translation)
 request-holiday=Запит вихідних
 request-is-larger-than-x-and-could-not-be-processed=Request is larger than {0} and could not be processed. (Automatic Copy)
@@ -14857,6 +14858,7 @@ the-file-was-processed-correctly=Файл оброблено правильно.
 the-file-x-cannot-be-imported=The file <em>{0}</em> cannot be imported. (Automatic Copy)
 the-file-x-cannot-be-inspected=The file {0} cannot be inspected. (Automatic Copy)
 the-file-x-cannot-be-saved=The file <em>{0}</em> cannot be saved. (Automatic Copy)
+the-files-can-be-stored-in-a-object-entry-or-in-a-specific-folder-from-documents-and-media=The files can be stored in a object entry or in a specific folder from Documents and Media. (Automatic Copy)
 the-files-were-imported-correctly=Файли імпортовано правильно. (Automatic Translation)
 the-firm-cannot-be-deleted-because-it-has-associated-projects=Фірма не може бути видалена, адже вона має асоційовані проекти.
 the-firm-could-not-be-found=Фірма не знайдена.
@@ -16503,6 +16505,7 @@ upload-another-file=Upload Another File (Automatic Copy)
 upload-certificate=Передати сертифікат (Automatic Translation)
 upload-completed=Завантаження завершено
 upload-definition=Визначення передавання (Automatic Translation)
+upload-directly-from-users-computer=Upload Directly from the User's Computer Computer (Automatic Copy)
 upload-document=Завантажити документ
 upload-documents-no-larger-than-3000-k=Завантажувати документи розміром не більше 3 000 к. (Automatic Translation)
 upload-documents-no-larger-than-x=Завантажити документи розміром не більш {0}.
