--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_vi.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_vi.properties
@@ -12400,6 +12400,7 @@ request-courier=Yêu cầu chuyển phát nhanh (Automatic Translation)
 request-details=Chi tiết yêu cầu (Automatic Translation)
 request-details-full=Yêu cầu chi tiết đầy đủ (Automatic Translation)
 request-details-minimal=Yêu cầu chi tiết tối thiểu (Automatic Translation)
+request-files=Request Files (Automatic Copy)
 request-header-auto-login-configuration-name=Tiêu đề Yêu cầu Đăng nhập Tự động (Automatic Translation)
 request-holiday=Yêu cầu nghỉ
 request-is-larger-than-x-and-could-not-be-processed=Yêu cầu lớn hơn {0} và không thể được thực hiện.
@@ -14857,6 +14858,7 @@ the-file-was-processed-correctly=Tệp đã được xử lý đúng cách. (Aut
 the-file-x-cannot-be-imported=Tập tin <em>{0}</em> không thể được nhập khẩu.
 the-file-x-cannot-be-inspected=The file {0} cannot be inspected. (Automatic Copy)
 the-file-x-cannot-be-saved=Tập tin <em>{0}</em> không thể được lưu lại.
+the-files-can-be-stored-in-a-object-entry-or-in-a-specific-folder-from-documents-and-media=The files can be stored in a object entry or in a specific folder from Documents and Media. (Automatic Copy)
 the-files-were-imported-correctly=Các tệp đã được chuyển nhập đúng. (Automatic Translation)
 the-firm-cannot-be-deleted-because-it-has-associated-projects=Không thể xóa doanh nghiệp vì đang có ràng buộc với dự án.
 the-firm-could-not-be-found=Không tìm thấy doanh nghiệp.
@@ -16503,6 +16505,7 @@ upload-another-file=Upload Another File (Automatic Copy)
 upload-certificate=Tải lên chứng chỉ (Automatic Translation)
 upload-completed=Tải lên thành công
 upload-definition=Tải lên Định nghĩa
+upload-directly-from-users-computer=Upload Directly from the User's Computer Computer (Automatic Copy)
 upload-document=Tải lên tài liệu
 upload-documents-no-larger-than-3000-k=Tải lên tài liệu không lớn hơn 3, 000k. (Automatic Translation)
 upload-documents-no-larger-than-x=Tài liệu tải lên không lớn hơn {0}.
