--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_TW.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_TW.properties
@@ -12401,6 +12401,7 @@ request-courier=請求快遞
 request-details=請求詳細資訊
 request-details-full=請求詳細資訊 - 完整
 request-details-minimal=請求詳細資訊 - 最少
+request-files=Request Files (Automatic Copy)
 request-header-auto-login-configuration-name=自動登入請求Header
 request-holiday=請求假日
 request-is-larger-than-x-and-could-not-be-processed=請求大於{0}因此無法處理。
@@ -14858,6 +14859,7 @@ the-file-was-processed-correctly=已正確處理該檔案。
 the-file-x-cannot-be-imported=檔案<em>{0}</em>不能被匯入。
 the-file-x-cannot-be-inspected=The file {0} cannot be inspected.
 the-file-x-cannot-be-saved=檔案<em>{0}</em>不能被儲存。
+the-files-can-be-stored-in-a-object-entry-or-in-a-specific-folder-from-documents-and-media=The files can be stored in a object entry or in a specific folder from Documents and Media. (Automatic Copy)
 the-files-were-imported-correctly=欄位已被正確匯入。
 the-firm-cannot-be-deleted-because-it-has-associated-projects=公司不能被刪除因為它有關聯到專案。
 the-firm-could-not-be-found=找不到公司。
@@ -16504,6 +16506,7 @@ upload-another-file=上傳其他檔案
 upload-certificate=上傳憑證
 upload-completed=上傳完成
 upload-definition=上傳定義
+upload-directly-from-users-computer=Upload Directly from the User's Computer Computer (Automatic Copy)
 upload-document=上傳文件
 upload-documents-no-larger-than-3000-k=上傳文件不可以大於 3,000k。
 upload-documents-no-larger-than-x=上傳文件不可以大於 {0}。
