--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fa.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fa.properties
@@ -12400,6 +12400,7 @@ request-courier=درخواست پیک
 request-details=درخواست جزئیات (Automatic Translation)
 request-details-full=درخواست جزئیات کامل (Automatic Translation)
 request-details-minimal=درخواست جزئیات حداقل (Automatic Translation)
+request-files=Request Files (Automatic Copy)
 request-header-auto-login-configuration-name=ورود خودکار درخواست سربرگ
 request-holiday=درخواست تعطیلات
 request-is-larger-than-x-and-could-not-be-processed=درخواست بیشتر از {0} است و نمی‌تواند پردازش شود.
@@ -14857,6 +14858,7 @@ the-file-was-processed-correctly=پرونده به درستی پردازش شد.
 the-file-x-cannot-be-imported=فایل <em>{0}</em> نمی‌تواند ارسال شود.
 the-file-x-cannot-be-inspected=The file {0} cannot be inspected. (Automatic Copy)
 the-file-x-cannot-be-saved=فایل <em>{0}</em> نمی‌تواند ذخیره شود.
+the-files-can-be-stored-in-a-object-entry-or-in-a-specific-folder-from-documents-and-media=The files can be stored in a object entry or in a specific folder from Documents and Media. (Automatic Copy)
 the-files-were-imported-correctly=فایل ها به درستی بارگذاری شده اند.
 the-firm-cannot-be-deleted-because-it-has-associated-projects=این شرکت را نمی‌توان حذف کرد زیرا پروژه هایی به آن تخصیص داده شده است.
 the-firm-could-not-be-found=شرکت یافت نشد.
@@ -16503,6 +16505,7 @@ upload-another-file=Upload Another File (Automatic Copy)
 upload-certificate=آپلود گواهی (Automatic Translation)
 upload-completed=بارگذاری کامل شد
 upload-definition=بارگذاری تعاریف
+upload-directly-from-users-computer=Upload Directly from the User's Computer Computer (Automatic Copy)
 upload-document=بارگذاری سند
 upload-documents-no-larger-than-3000-k=آپلود اسناد بزرگتر از 3000k. (Automatic Translation)
 upload-documents-no-larger-than-x=بارگذاری اسناد حداکثر به اندازه {0}.
