--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hi_IN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hi_IN.properties
@@ -12400,6 +12400,7 @@ request-courier=अनुरोध कूरियर (Automatic Translation)
 request-details=विवरण का अनुरोध करें (Automatic Translation)
 request-details-full=अनुरोध विवरण पूर्ण (Automatic Translation)
 request-details-minimal=अनुरोध विवरण न्यूनतम (Automatic Translation)
+request-files=Request Files (Automatic Copy)
 request-header-auto-login-configuration-name=ऑटो लॉगिन अनुरोध हेडर (Automatic Translation)
 request-holiday=छुट्टी का अनुरोध
 request-is-larger-than-x-and-could-not-be-processed=Request is larger than {0} and could not be processed. (Automatic Copy)
@@ -14857,6 +14858,7 @@ the-file-was-processed-correctly=फाइल पर सही ढंग से 
 the-file-x-cannot-be-imported=The file <em>{0}</em> cannot be imported. (Automatic Copy)
 the-file-x-cannot-be-inspected=The file {0} cannot be inspected. (Automatic Copy)
 the-file-x-cannot-be-saved=The file <em>{0}</em> cannot be saved. (Automatic Copy)
+the-files-can-be-stored-in-a-object-entry-or-in-a-specific-folder-from-documents-and-media=The files can be stored in a object entry or in a specific folder from Documents and Media. (Automatic Copy)
 the-files-were-imported-correctly=फाइलों का सही आयात किया गया । (Automatic Translation)
 the-firm-cannot-be-deleted-because-it-has-associated-projects=फर्म delete नही हो सकती क्योकि यह प्रॉजेक्ट से associated है|
 the-firm-could-not-be-found=Firm पायी नहीं जा सकी|
@@ -16503,6 +16505,7 @@ upload-another-file=Upload Another File (Automatic Copy)
 upload-certificate=अपलोड प्रमाण पत्र (Automatic Translation)
 upload-completed=अपलोड Completed
 upload-definition=परिभाषा अपलोड करें (Automatic Translation)
+upload-directly-from-users-computer=Upload Directly from the User's Computer Computer (Automatic Copy)
 upload-document=अपलोड Document
 upload-documents-no-larger-than-3000-k=दस्तावेज़ अपलोड करें जो 3,000k से बड़ा नहीं है। (Automatic Translation)
 upload-documents-no-larger-than-x=अपलोड documents no larger than {0}.
