--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ms.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ms.properties
@@ -12400,6 +12400,7 @@ request-courier=Permintaan Kurier (Automatic Translation)
 request-details=Minta Butiran (Automatic Translation)
 request-details-full=Minta Butiran Penuh (Automatic Translation)
 request-details-minimal=Meminta Butiran Minimum (Automatic Translation)
+request-files=Request Files (Automatic Copy)
 request-header-auto-login-configuration-name=Pengepala Permintaan Log Masuk Automatik (Automatic Translation)
 request-holiday=Minta Percutian (Automatic Translation)
 request-is-larger-than-x-and-could-not-be-processed=Request is larger than {0} and could not be processed. (Automatic Copy)
@@ -14857,6 +14858,7 @@ the-file-was-processed-correctly=Fail telah diproses dengan betul. (Automatic Tr
 the-file-x-cannot-be-imported=The file <em>{0}</em> cannot be imported. (Automatic Copy)
 the-file-x-cannot-be-inspected=The file {0} cannot be inspected. (Automatic Copy)
 the-file-x-cannot-be-saved=The file <em>{0}</em> cannot be saved. (Automatic Copy)
+the-files-can-be-stored-in-a-object-entry-or-in-a-specific-folder-from-documents-and-media=The files can be stored in a object entry or in a specific folder from Documents and Media. (Automatic Copy)
 the-files-were-imported-correctly=Fail telah diimport dengan betul. (Automatic Translation)
 the-firm-cannot-be-deleted-because-it-has-associated-projects=Firma itu tidak boleh dihapuskan kerana ia mempunyai projek yang berkaitan. (Automatic Translation)
 the-firm-could-not-be-found=Firma itu tidak dapat dijumpai. (Automatic Translation)
@@ -16503,6 +16505,7 @@ upload-another-file=Upload Another File (Automatic Copy)
 upload-certificate=Sijil Muat Naik (Automatic Translation)
 upload-completed=Muat Naik Selesai (Automatic Translation)
 upload-definition=Muat Naik Definisi (Automatic Translation)
+upload-directly-from-users-computer=Upload Directly from the User's Computer Computer (Automatic Copy)
 upload-document=Muat Naik Dokumen (Automatic Translation)
 upload-documents-no-larger-than-3000-k=Muat naik dokumen tidak lebih besar daripada 3,000k. (Automatic Translation)
 upload-documents-no-larger-than-x=Upload documents no larger than {0}. (Automatic Copy)
