--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
@@ -12403,6 +12403,7 @@ request-courier=Koerier aanvragen
 request-details=Gegevens vragen
 request-details-full=Complete gegevens vragen
 request-details-minimal=Minimale gegevens vragen
+request-files=Request Files (Automatic Copy)
 request-header-auto-login-configuration-name=Autologin verzoek header
 request-holiday=Vakantieverzoek
 request-is-larger-than-x-and-could-not-be-processed=Het verzoek is groter dan {0} en kan niet worden verwerkt.
@@ -14860,6 +14861,7 @@ the-file-was-processed-correctly=Het bestand werd correct verwerkt.
 the-file-x-cannot-be-imported=Het bestand <em>{0}</em> kan niet worden geïmporteerd.
 the-file-x-cannot-be-inspected=Het bestand {0} kan niet worden geïnspecteerd.
 the-file-x-cannot-be-saved=Het bestand <em>{0}</em> kan niet worden opgeslagen.
+the-files-can-be-stored-in-a-object-entry-or-in-a-specific-folder-from-documents-and-media=The files can be stored in a object entry or in a specific folder from Documents and Media. (Automatic Copy)
 the-files-were-imported-correctly=De bestanden werden correct geïmporteerd.
 the-firm-cannot-be-deleted-because-it-has-associated-projects=Het bedrijf werd niet verwijderd omdat het gekoppelde projecten heeft.
 the-firm-could-not-be-found=Het bedrijf werd niet gevonden.
@@ -16506,6 +16508,7 @@ upload-another-file=Nog een bestand uploaden
 upload-certificate=Certificaat uploaden
 upload-completed=Upload voltooid
 upload-definition=Definitie uploaden
+upload-directly-from-users-computer=Upload Directly from the User's Computer Computer (Automatic Copy)
 upload-document=Document uploaden
 upload-documents-no-larger-than-3000-k=Upload documenten tot 3.000 kB.
 upload-documents-no-larger-than-x=Documenten niet groter dan {0} uploaden.
