--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_PT.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_PT.properties
@@ -12402,6 +12402,7 @@ request-courier=Solicitar Courier (Automatic Translation)
 request-details=Detalhes da solicitação (Automatic Translation)
 request-details-full=Detalhes da solicitação completo (Automatic Translation)
 request-details-minimal=Detalhes de solicitação mínimo (Automatic Translation)
+request-files=Request Files (Automatic Copy)
 request-header-auto-login-configuration-name=Cabeçalho do Pedido para Autenticação Automática
 request-holiday=Requisitar Férias
 request-is-larger-than-x-and-could-not-be-processed=O pedido é maior que {0} e não pôde ser processado.
@@ -14859,6 +14860,7 @@ the-file-was-processed-correctly=O arquivo foi processado corretamente. (Automat
 the-file-x-cannot-be-imported=O ficheiro <em>{0}</em> não pode ser importado.
 the-file-x-cannot-be-inspected=The file {0} cannot be inspected. (Automatic Copy)
 the-file-x-cannot-be-saved=O ficheiro <em>{0}</em> não pode ser salvo.
+the-files-can-be-stored-in-a-object-entry-or-in-a-specific-folder-from-documents-and-media=The files can be stored in a object entry or in a specific folder from Documents and Media. (Automatic Copy)
 the-files-were-imported-correctly=Os arquivos foram importados corretamente. (Automatic Translation)
 the-firm-cannot-be-deleted-because-it-has-associated-projects=A empresa não pode ser removida porque tem projetos associados.
 the-firm-could-not-be-found=Não foi possível encontrar a empresa.
@@ -16505,6 +16507,7 @@ upload-another-file=Upload Another File (Automatic Copy)
 upload-certificate=Certificado de upload (Automatic Translation)
 upload-completed=Upload Completo
 upload-definition=Upload de Definição
+upload-directly-from-users-computer=Upload Directly from the User's Computer Computer (Automatic Copy)
 upload-document=Upload de Documento
 upload-documents-no-larger-than-3000-k=Envie documentos não superiores a 3.000 mil. (Automatic Translation)
 upload-documents-no-larger-than-x=Os documentos devem ser menores que {0}.
