--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_CN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_CN.properties
@@ -12402,6 +12402,7 @@ request-courier=请求快递
 request-details=请求详细信息
 request-details-full=请求详细信息 - 全部
 request-details-minimal=请求详细信息 - 最简
+request-files=Request Files (Automatic Copy)
 request-header-auto-login-configuration-name=自动登录请求首标
 request-holiday=假期申请
 request-is-larger-than-x-and-could-not-be-processed=请求大于{0}因此无法处理。
@@ -14859,6 +14860,7 @@ the-file-was-processed-correctly=已正确处理该文件。
 the-file-x-cannot-be-imported=文件<em>{0}</em>无法导入。
 the-file-x-cannot-be-inspected=无法检查文件 {0}。
 the-file-x-cannot-be-saved=文件<em>{0}</em>无法保存。
+the-files-can-be-stored-in-a-object-entry-or-in-a-specific-folder-from-documents-and-media=The files can be stored in a object entry or in a specific folder from Documents and Media. (Automatic Copy)
 the-files-were-imported-correctly=文件已正确导入。
 the-firm-cannot-be-deleted-because-it-has-associated-projects=公司无法被删除，因为与项目关联。
 the-firm-could-not-be-found=找不到公司。
@@ -16505,6 +16507,7 @@ upload-another-file=上传其他文件
 upload-certificate=上传证书
 upload-completed=上传完成
 upload-definition=上传定义
+upload-directly-from-users-computer=Upload Directly from the User's Computer Computer (Automatic Copy)
 upload-document=上传文档
 upload-documents-no-larger-than-3000-k=上传文件不能大于 3,000k。
 upload-documents-no-larger-than-x=上传文件不能大于{0}。
